Bug 347710 nsDirPrefs leaks a DirPrefObserver on shutdown because we only release it on 'profile-do-change'. p=Adam Guthrie <ispiked@gmail.com>,r/sr=bienvenu